--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "browserslist": [
+    "last 2 version",
+    "> 1%"
+  ],
   "scripts": {
     "build": "webpack --config ./bundler/webpack.prod.js",
     "dev": "webpack serve --config ./bundler/webpack.dev.js"
